--- a/style.css
+++ b/style.css
@@ -21,9 +21,48 @@
 
 
 /* =========== HOME PAGE - MOBILE ============== */
-.home-page {
+.hero-content {
 margin: 0;
+
 }
+.home-page {
+    position: relative;
+    background: #cde0e1;
+    overflow: hidden;
+}
+.home-page:before {
+    content: ' ';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: 0.4;
+    background-image: url('https://media.licdn.com/mpr/mpr/AAEAAQAAAAAAAAvYAAAAJGZhZGRmNDdlLWMwMDUtNDk0NS1iMTNmLWYxZGI4Mjg1YmI0MA.jpg');
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    -ms-background-size: cover;
+    -o-background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    background-size: cover;
+}
+
+.home-page h1 {
+    text-align: center;
+    z-index: 2;
+    position: relative;
+    color: #fff;
+} 
+.home-page h4 {
+    text-align: center;
+    z-index: 2;
+    position: relative;
+    color: #333;
+} 
+
 .about-preview {
     background:#cde0e1;
     padding: 15% 0 15% 0;
